--- a/css/index.css
+++ b/css/index.css
@@ -83,20 +83,21 @@ body {
 
 .publicacoes__artigo__links li {
     list-style: none;
-    background-color: var(--cor-apoio1);
-    color: var(--cor-apoio2);
-    border-radius: 0.5rem; 
-    padding: 1rem;
-    width: 20%;
-    text-align: center;
 }
 
 .publicacoes__artigo__links a {          
+    background-color: var(--cor-apoio1);
+    border-radius: 0.5rem; 
+    color: var(--cor-apoio2);
     display: inline-block;
     font-family: var(--font-secundaria);
     font-size: 24px;
     font-weight: 600;    
-    text-decoration: none;   
+    padding: 1rem;
+    text-decoration: none;     
+    text-align: center;
+    width: 12rem;
+    
 }
 
 .publicacoes__artigo__links-abreviacao {
